--- a/WORK EXPERIENCE.html
+++ b/WORK EXPERIENCE.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title><h3><u>WORK HISTORY:</u></h3></title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h4>Total experience: 7.4 Years</h4>
