--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </table>
 
 
-<hr size="3" noshade="0">
+<hr size="3">
 <h3><u>Contact Details:</u></h3>
 <ul>
     <li>Mob. No: 9762251462</li>
@@ -27,10 +27,10 @@
     <li>Address: 3, Vitthal Garden C, Vitthal Nagar, Kamatwade, Nashik</li>
     <li> <a href="https://www.linkedin.com/in/avinash-amritkar-953a7690" >LinkedIn profile</a></li>
 </ul>
-<hr size="3" noshade="0">
+<hr size="3">
 <h3><u><a href="WORK EXPERIENCE.html">WORK EXPERIENCE</a></u></h3>
 
-<hr size="3" noshade="0">
+<hr size="3">
 
 <h3><u>EDUCATION:</u></h3>
 <ul>
@@ -41,7 +41,7 @@
     <li>Good knowledge of E- Transmission (E- motor and E-axle)<br> E- Vehicles and renewable energy</li>
 </ul>
 
-<hr size="3" noshade="0">
+<hr size="3">
 <h3><u>SKILLS: </u></h3>
 <ul>
     <li>Product development</li>
@@ -54,7 +54,7 @@
     <li>Technical customer communication</li>
 </ul>
 
-<hr size="3" noshade="0">
+<hr size="3">
 <h3><u>SOFTWARE SKILLS: </u></h3>
 <table cellspacing="10">
     <tr>
@@ -92,7 +92,7 @@
     </tr>
 </table>
 
-<hr size="3" noshade="0">
+<hr size="3">
 <h3><u> LANGUAGES:  </u></h3>
 <ul>
     <li>English: Proficient</li>
@@ -113,7 +113,7 @@
     <li>Reverse engineering of parts for some of the contacts</li>
 </ul>
 
-<hr size="3" noshade="0">
+<hr size="3">
 <h3><u> HOBBIES:  </u></h3>
 <ul>
     <li>Playing games on computer as well as on field</li>
@@ -123,7 +123,7 @@
     <li>Visiting new and interesting places</li>
 </ul>
 
-<hr size="3" noshade="0">
+<hr size="3">
 <h3><u> AWARDS AND CERTIFICATION: </u></h3>
 <ul>
     <li>5S Competition award</li>
@@ -133,13 +133,13 @@
     <li>AUTOCAD</li>
 </ul>
 
-<hr size="3" noshade="0">
+<hr size="3">
 <h3><u> ADDITIONAL INFORMATION:  </u></h3>
 <ul>
     <li>DOB: 26/11/1992</li>
     <li>Home contact: 9404209729</li>
 </ul>
 
-<hr size="3" noshade="0">
+<hr size="3">
 </body>
 </html>
