--- a/WORK EXPERIENCE.html
+++ b/WORK EXPERIENCE.html
@@ -6,9 +6,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h4>Total experience: 7.7 Years</h4>
+<h4>Total experience: 8.1 Years</h4>
 <ul>
-    <li><h5>Hindustan Hardy Limited, <br>Nashik, Maharashtra<br> From January 2017 To present (5.6 Years)</h5></li>
+    <li><h5>KPIT Technologies Limited, <br>Pune, Maharashtra<br> From September 2022 To Present (0.4 Years)</h5></li>
+    <li>DAF TRUCKS NV, Vehicle Engineering, Engine installation and exterior development, Chassis </li>
+    <ul>
+        <li><h5><u>Achievements:</u></h5></li>
+        <ul>
+            <li>Successfully BEV cooling system project</li>
+            <li>Received the Customer Excellence award </li>
+            <li>Received comrade award for ontime delivery of the project</li>
+        </ul>
+            <li><h5><u>Key Deliverables:</u></h5></li>
+        <ul>
+            <li>Understanding the overseas customer requirements and make project statements </li>
+            <li>Work on the EPN (Engineering problem Notifications) and give solutions involving less development</li>
+            <li>Work on ECR (Engineering change requistion) till implementation with ECN (Engineering Change Notification)</li>
+            <li>Work on concept developments such as Chassis for BEV</li>
+            <li>Work on FRACAS (Failure Report and Corrective Action System), to give effective solutions against receipt of failures</li>
+            <li>Handling a team of 4 Members</li>
+        </ul>
+    </ul>
+    <li><h5>Hindustan Hardy Limited, <br>Nashik, Maharashtra<br> From January 2017 To August 2022 (5.8 Years)</h5></li>
     <ul>
         <li><h5><u>Achievements:</u></h5></li>
         <ul>
