--- a/WORK EXPERIENCE.html
+++ b/WORK EXPERIENCE.html
@@ -6,16 +6,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h4>Total experience: 8.2 Years</h4>
+<h4>Total experience: 8.5 Years</h4>
 <ul>
-    <li><h5>KPIT Technologies Limited, <br>Pune, Maharashtra<br> From September 2022 To Present (0.6 Years)</h5></li>
+    <li><h5>KPIT Technologies Limited, <br>Pune, Maharashtra<br> From September 2022 To Present (0.8 Years)</h5></li>
     <li>DAF TRUCKS NV, Vehicle Engineering, Engine installation and exterior development, Chassis </li>
     <ul>
         <li><h5><u>Achievements:</u></h5></li>
         <ul>
             <li>Successfully completed BEV cooling system project</li>
+            <li>Successfully implemented the changes in BEV cooling due to addition of insulation in the EAC</li>
             <li>Received the Customer Excellence award </li>
             <li>Received comrade award for ontime delivery of the project</li>
+            <li>Received appreciation for high CSAT score</li>
         </ul>
             <li><h5><u>Key Deliverables:</u></h5></li>
         <ul>
@@ -24,7 +26,7 @@
             <li>Work on ECR (Engineering change requistion) till implementation with ECN (Engineering Change Notification)</li>
             <li>Worked on concept developments such as Chassis for BEV</li>
             <li>Designed and packaged the propeller shaft for class 8 Electric vehicle</li>
-            <li>Handling a team of 4 Members</li>
+            <li>Handling a team of 7 Members</li>
         </ul>
     </ul>
     <li><h5>Hindustan Hardy Limited, <br>Nashik, Maharashtra<br> From January 2017 To August 2022 (5.8 Years)</h5></li>
